src/objects/Fee__c.object
<CustomObject>
    <description>Fee</description>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Number or % 
Amount, is a flat amount. For other fee calculation methods, this is a % amount.</description>
        <inlineHelpText>Number or % 
Amount, is a flat amount. For other fee calculation methods, this is a % amount.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Currency</description>
        <inlineHelpText>Currency</inlineHelpText>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_fees__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Default fees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fee_Calculation_Method__c</fullName>
        <description>Fee Calculation Method</description>
        <inlineHelpText>Fee Calculation Method</inlineHelpText>
        <label>Fee Calculation Method</label>
        <picklist>
            <controllingField>Time_of_charge__c</controllingField>
            <picklistValues>
                <fullName>Amount calculated as % of loan amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount calculated as % of (loan amount + interest)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount calculated as % on interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fee_Category__c</fullName>
        <description>Fee Category</description>
        <label>Fee Category</label>
        <picklist>
            <picklistValues>
                <fullName>Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savings</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Income_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fee Income Account</label>
        <referenceTo>MF_Account__c</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interest_Bearing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interest Bearing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maintenance_Fee_s_Frequency__c</fullName>
        <label>Maintenance Fee&apos;s Frequency</label>
        <picklist>
            <controllingField>Time_of_charge__c</controllingField>
            <picklistValues>
                <fullName>Monthly</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Refundable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Refundable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State</description>
        <inlineHelpText>State</inlineHelpText>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suspended_Fee_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Suspended Fee Account</label>
        <referenceTo>MF_Account__c</referenceTo>
        <relationshipLabel>Fees (Suspended Fee Account)</relationshipLabel>
        <relationshipName>Fees_SFA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_of_charge__c</fullName>
        <description>Time of charge</description>
        <inlineHelpText>Time of charge</inlineHelpText>
        <label>Time of charge</label>
        <picklist>
            <controllingField>Fee_Category__c</controllingField>
            <picklistValues>
                <fullName>Time of First Repayment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spread across Loan Repayments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time of Registration</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Time of Disbursement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay-Off Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check Bounce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FD Early Withdrawal Penalty</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Fee</label>
    <nameField>
        <label>Fee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>